# ur5_digital_twin

./: .gitignore  README.md
docs/: architecture.md  development_workflow.md  environment_setup.md  external_resources.md  migration_UB22_to_UB26.md  operation_and_deployment.md  troubleshooting_and_reset.md
my_arm_controller/: CMakeLists.txt  package.xml
my_arm_controller/launch/: planner.launch.py
my_arm_controller/src/: ai_torque_controller.py  arm_controller.cpp  conventional_controller.py  research_control.py
my_arm_description/: CMakeLists.txt  package.xml
my_arm_description/launch/: sim.launch.py
my_arm_description/urdf/: ur5.urdf  ur5_0.urdf  ur5_1.urdf  ur5_3.urdf  ur5_5.urdf
my_arm_moveit_config/: .setup_assistant  package.xml
my_arm_moveit_config/launch/: demo.launch.py  gazebo_sim.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
ur5_controller/: CMakeLists.txt  package.xml
ur5_controller/launch/: planner.launch.py
ur5_controller/src/: conv_control_template.py  conventional_cartesian_ik.py  conventional_joint_space.py  joint_space_log.h5  joint_space_log_Test1.h5  joint_space_log_filtered.h5  multi_waypoint_planner.cpp  unified_control.py
ur5_controller/src/archive/: custom_control_template.py  mode_switcher.py  move_arm.cpp
ur5_description/: CMakeLists.txt  package.xml
ur5_description/config/: controllers.yaml
ur5_description/launch/: sim.launch.py
ur5_description/urdf/: ur5.urdf
ur5_moveit_config/: .setup_assistant  package.xml
ur5_moveit_config/config/: joint_limits.yaml  ros2_controllers.yaml  ur5.srdf
ur5_moveit_config/launch/: gazebo_sim.launch.py  spawn_controllers.launch.py
